# student-attendence-system

./: .gitignore  CMakeLists.txt  Makefile  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  api_server  database.sql  srs.md  uml.puml
.github/: copilot-instructions.md
include/: AdminController.h  BaseController.h  Config.h  Database.h  StudentController.h  TeacherController.h  UIHelper.h
src/: AdminController.cpp  BaseController.cpp  Config.cpp  Database.cpp  StudentController.cpp  TeacherController.cpp  UIHelper.cpp  main.cpp
web/: Makefile  README.md  REFACTORING_FIXES.md  api_server
web/public/: admin.html  index.html  student.html  teacher.html
web/public/css/: style.css
web/public/js/: api.js
web/src/: api_server.cpp
